src/components/Workspace/Workspace.scss
@import '../../styles/core-mixins.scss';

// App class, containing header and workspace in columns
.App {
  @include flexCol;
  overflow: hidden;
  flex: 1;

  // This is a full screen (viewport) app
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.App-dropzone {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: none;

  font-size: 28px;
  color: white;
  text-transform: uppercase;
  display: none;
  font-weight: 700;

  &.isDroppable {
    @include flexRow;
    @include flexAlignItemsCenter;
    @include flexJustifyCenter;
    background-color: $zorroa-dropzone;
  }
}

// Allow the workspace to fill the full height of App
.Workspace {
  background-color: $zorroa-nearwhite;

  & .Workspace-vertical-separator {
    height: 100%;
    width: 1px;
    border-right: 1px solid $zorroa-lightgray;
  }

  .Metadata-icon {
    margin-left: 0;
    font-size: 10px;
    color: $zorroa-warm-grey-60;
    padding: 6px;

    &:hover {
      color: $zorroa-sickly-green;
    }
  }
}

.Workspace-reloader {
  @include flexOff;
  @include flexRowCenter;
  @include flexJustifySpaceBetween;
  width: 100%;
  height: 64px;

  background-color: $zorroa-orangish;
  color: #fff;
  padding-left: 10px;
}

.Workspace-reloader-reload {
  @include flexRowCenter;
  height: 30px;

  background-color: $zorroa-sickly-green;
  &:hover { background-color: darken($zorroa-sickly-green, 15%); }
  border: 2px solid white;
  border-radius: 3px;
  margin-left: 20px;
  color: #fff;
  font-size: 14px;
}

.Workspace-reloader-close {
  @include flexRowCenter;
  @include zorroa-darken;
  width: 64px;
  height: 64px;

  font-size: 24px;
  color: #fff;
}

// Footers use flex-basis to toggle between open and close
.footer {
  flex: 0 0 20px;
  max-height: 20px;
  padding: 8px;
  border-top: 1px solid $zorroa-lightgray;
  margin-bottom: 4px;

  &.footer-open {
    max-height: 300px;
    flex: 0 0 300px;
  }
}

